<resources>
    <string name="app_name">EcoBog</string>
    <string name="logo_ecobog">Logo EcoBog</string>
    <string name="reciclando">Gente reciclando</string>
    <string name="gestiona">Gestiona los residos \nsólidos facilmente</string>
    <string name="siguiente">Siguiente</string>
    <string name="conoce">Conoce donde llevar\nlos residuos sólidos</string>
    <string name="unete">Únete a la era de la economía circular</string>
    <string name="inicio">¡Bienvenidos!</string>
    <string name="email">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta? Registrate</string>
    <string name="olvidaste">Olvidaste tu contraseña</string>
    <string name="reestablece">Reestablece tu contraseña</string>
    <string name="escribe_correo">Correo electrónico</string>
    <string name="ingresa_contrasena">Ingresa una nueva contraseña</string>
    <string name="confirma_contrasena">Confirma tu nueva contraseña</string>
    <string name="reestablecer_contrasena">Reestablecer Contraseña</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="usuario">Escribe tu nombre</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="Confirmar_contrasena">Confirmar contraseña</string>
    <string name="volver_a_la_pantalla_anterior">Volver a la pantalla anterior</string>
    <string name="notificaciones">notificaciones</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="Guardar">Guardar</string>
    <string name="phone">Escribe tu teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Actualizar Teléfono</string>
    <string name="act_direccion">Actualizar Dirección</string>
    <string name="lista">Crea una lista</string>
    <string name="Envios">Envios</string>
    <string name="Ecoideas">Ecoideas</string>
    <string name="title_activity_main_menu">Main_menu</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Recicla</string>
    <string name="title_notifications">Mapa</string>
    <string name="gestiona_titulo">Gestiona tus residuos en 3 simples pasos</string>
    <string name="futuro_text">El futuro está en tus manos: Recicla y transforma el mundo</string>
</resources>